--- a/assets/requirements.txt
+++ b/assets/requirements.txt
@@ -14,6 +14,12 @@ requests
 pymysql
 redis
 jsonschema>=3.0
+tabula-py
+scipy
+scikit-image
+scikit-learn
+matplotlib
+sklearn
 
 connexion[swagger-ui] >= 2.6.0; python_version>="3.6"
 # 2.3 is the last version that supports python 3.4-3.5
