--- a/assets/requirements.txt
+++ b/assets/requirements.txt
@@ -23,6 +23,7 @@ sklearn
 pymongo
 dnspython
 mongo-queue-service
+sentry-sdk
 
 connexion[swagger-ui] >= 2.6.0; python_version>="3.6"
 # 2.3 is the last version that supports python 3.4-3.5
