--- a/assets/requirements.txt
+++ b/assets/requirements.txt
@@ -35,3 +35,7 @@ werkzeug == 0.16.1; python_version=="3.5" or python_version=="3.4"
 swagger-ui-bundle >= 0.0.2
 python_dateutil >= 2.6.0
 setuptools >= 21.0.0
+
+gunicorn==20.1.0
+flask-marshmallow==0.14.0
+flask-cors==3.0.10
