--- a/assets/requirements.txt
+++ b/assets/requirements.txt
@@ -1,7 +1,6 @@
 PyPDF2<4.0
 EbookLib == 0.16
 pocketsphinx == 0.1.15
-textract
 pypng
 zbar-py
 pillow
@@ -22,11 +21,13 @@ matplotlib
 pymongo
 dnspython
 mongo-queue-service
+pdfminer.six==20221105
+jpype1
 sentry-sdk
 
-connexion[swagger-ui] >= 2.6.0; python_version>="3.6"
+connexion[swagger-ui,uvicorn] >= 2.6.0; python_version>="3.6"
 # 2.3 is the last version that supports python 3.4-3.5
-connexion[swagger-ui] <= 2.3.0; python_version=="3.5" or python_version=="3.4"
+connexion[swagger-ui,uvicorn] <= 2.3.0; python_version=="3.5" or python_version=="3.4"
 # connexion requires werkzeug but connexion < 2.4.0 does not install werkzeug
 # we must peg werkzeug versions below to fix connexion
 # https://github.com/zalando/connexion/pull/1044
