--- a/assets/requirements.txt
+++ b/assets/requirements.txt
@@ -25,6 +25,7 @@ mongo-queue-service
 pdfminer.six==20221105
 jpype1
 sentry-sdk
+pycryptodome==3.15.0
 
 uvicorn
 connexion[flask,swagger-ui,uvicorn] == 2.14.2; python_version>="3.6"
